--- a/dars4.html
+++ b/dars4.html
@@ -41,8 +41,8 @@
 <p>Top 3 things cats hate:</p>
 <ol>
   <li>flea treatment</li>
-  <li>thunder</li>
-  <li>other cats</li>
+  <li>nima gapr</li>
+  <li>mushuklar jangits</li>
 </ol>
 <form action="/submit-cat-photo">
   <label><input type="radio" name="indoor-outdoor"> Indoor</label>
