--- a/dars4.html
+++ b/dars4.html
@@ -40,7 +40,7 @@
 </ul>
 <p>Top 3 things cats hate:</p>
 <ol>
-  <li>flea treatment</li>
+  <li>flea </li>
   <li>nima gapr</li>
   <li>mushuklar jangits</li>
 </ol>
