--- a/dars4.html
+++ b/dars4.html
@@ -42,7 +42,7 @@
 <ol>
   <li>flea </li>
   <li>nima gapr</li>
-  <li>mushuklar jangits</li>
+  <li> jangits</li>
 </ol>
 <form action="/submit-cat-photo">
   <label><input type="radio" name="indoor-outdoor"> Indoor</label>
